clear inline style

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -96,3 +96,9 @@ button.primary__modal:hover {
         opacity: 1;
     }
 }
+
+#subs {
+    padding: 2rem !important;
+    color: white;
+    text-align: center;
+}
