--- a/src/components/notify/notify.hbs
+++ b/src/components/notify/notify.hbs
@@ -1,9 +1,9 @@
 <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
         <img src="img/icon.png" class="toast__img">
-        <strong style="margin-right: auto;">EyeScreen</strong>
+        <strong class="toast-header__title">EyeScreen</strong>
         <small>{{timeAgo}}</small>
-        <button style="border: 0; background: none;" onclick="document.getElementById('toasts').innerHTML = '';">
+        <button class="toast__btn_close" onclick="document.getElementById('toasts').innerHTML = '';">
             <i class="netflix" kind="close"></i>
         </button>
     </div>
