--- a/src/pages/login/login-page.hbs
+++ b/src/pages/login/login-page.hbs
@@ -1,4 +1,4 @@
-<div class="login-page" style="animation: show .2s ease;">
+<div class="login-page">
     {{> components/login-background}}
     <div class="login-page__container">
         {{> partial/header/partial-header loginPage=true kind="login-page"}}
