--- a/src/pages/main/main-page.hbs
+++ b/src/pages/main/main-page.hbs
@@ -1,4 +1,4 @@
-<div class="main" style="animation: show .2s ease;">
+<div class="main">
    {{> partial/header/partial-header kind="main-page" mainPage=true}}
 
     {{> components/main-background}}
