--- a/src/pages/profile/components/subscription-card.hbs
+++ b/src/pages/profile/components/subscription-card.hbs
@@ -1,12 +1,9 @@
-<div style="display: flex; flex-direction: column; width: 100%;">
-    <div style="
-                    border-radius: 0.5rem; 
-                    background-color: var(--dark);
-                    border: 3px solid rgba(255, 255, 255, 0.15)">
-        <div style="flex: 1 1 auto;    padding: 1rem;">
+<div class="subscription__container">
+    <div class="subscription__container__wrapper">
+        <div class="subscription__container__card">
             <h2>{{title_price}}</h2>
             <p>{{description}}</p>
-            <a href="" class="partial-btn" target="_blank" kind="primary-button" style="width: 100%; font-weight:700"
+            <a href="" class="partial-btn subscription__container__card__link" target="_blank" kind="primary-button"
                 id="payment"></a>
         </div>
     </div>
