--- a/src/pages/register/start-register.hbs
+++ b/src/pages/register/start-register.hbs
@@ -1,4 +1,4 @@
-<div class="login-page" style="animation: show .2s ease;">
+<div class="login-page">
   <div class="login-page__login-background" style="background-image: url('/img/drama.jpg');"></div>
   <div  class="login-page__container">
     {{> partial/header/partial-header kind="main-page" mainPage=true}}
