--- a/src/components/notify/notify.css
+++ b/src/components/notify/notify.css
@@ -38,15 +38,13 @@
     border-top-right-radius: calc(0.375rem - 1px);
 }
 
-.btn-close {
-    box-sizing: content-box;
-    width: 1em;
-    height: 1em;
-    padding: 0.25em 0.25em;
-    color: white;
+.toast-header__title {
+    margin-right: auto;
+}
+
+.toast__btn_close {
     border: 0;
-    border-radius: 0.375rem;
-    opacity: 1;
+    background: none;
 }
 
 .toast__img {
