--- a/src/pages/serials/serials-feed/serials-content.hbs
+++ b/src/pages/serials/serials-feed/serials-content.hbs
@@ -59,10 +59,7 @@
     </div>
 </div>
 
-<dialog id="subs" style="
-    padding: 2rem!important; 
-    color: white;
-    text-align: center;">
+<dialog id="subs">
     <div class="dialog__wrapper">
         <h2>Для просмотра получите подписку</h2>
         {{> partial/button/btn-link href="/profile" kind="primary-xl"
