--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -30,10 +30,7 @@
                 <a href="/serials" spa-link>Сериалы</a>
                 <a href="/list" spa-link>Избранное</a>
             </div>
-            <div style="display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; margin-left: 1rem;">
+            <div class="search__contol">
                 <div class="search-box">
                     <button class="btn-search"><i class="search-icon"></i></button>
 
@@ -47,18 +44,14 @@
         </div>
 
         <div class="small-menu">
-            <div style="display: inline-block; margin-bottom: 20px; margin-right: 3rem">
+            <div class="small__menu__logo">
                 {{> partial/netflix-logo/netflix-logo}}
             </div>
             <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
             <label for="burger-checkbox" class="burger"></label>
             <ul class="menu-list">
                 <li>
-                    <div style="display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-        margin-left: 1rem;">
+                    <div class="search__contol">
                         <div class="search-box">
                             <button class="btn-search"><i class="search-icon"></i></button>
 
@@ -103,10 +96,7 @@
                 <a href="/serials" spa-link>Сериалы</a>
                 <a href="/list" spa-link>Избранное</a>
             </div>
-            <div style="display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; margin-left: 1rem;">
+            <div class="search__contol">
                 <div class="search-box">
                     <button class="btn-search"><i class="search-icon"></i></button>
 
@@ -120,18 +110,14 @@
         </div>
 
         <div class="small-menu">
-            <div style="display: inline-block;  margin-bottom: 20px; margin-right: 3rem">
+            <div class="small__menu__logo">
                 {{> partial/netflix-logo/netflix-logo}}
             </div>
             <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
             <label for="burger-checkbox" class="burger"></label>
             <ul class="menu-list">
                 <li>
-                    <div style="display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-        margin-left: 1rem;">
+                    <div class="search__contol">
                         <div class="search-box">
                             <button class="btn-search"><i class="search-icon"></i></button>
                             <input type="text" class="input-search" placeholder="Поиск">
