--- a/src/pages/search/search-page.hbs
+++ b/src/pages/search/search-page.hbs
@@ -1,6 +1,6 @@
 {{> partial/header/partial-header feedPage=true kind="feed-page"}}
 
-<div class="glow-title" style="margin-bottom: 20px; font-size: 2rem;">Вы ищите: {{title}}</div>
+<div class="glow-title" style="margin-bottom: 20px; font-size: 2rem;">По вашему запросу найдено:</div>
 {{#if hasCast}}
 <div class="glow-title" style="font-size: 2rem;">Актеры</div>
 <div class="genre-container" id="cast">
