--- a/src/partial/cast-card.hbs
+++ b/src/partial/cast-card.hbs
@@ -1,7 +1,12 @@
 <div class="feed-collection__container-card cast-container-card" title="{{this.name}}">
     <div class="feed-collection__advanced-info cast-card">
         <a href="/{{baseUrl}}/{{this.id}}" class="feed-collection__advanced-info__link" spa-link>
-            {{this.name}}
+            <img class="avatar" style="height: 100px; width: 100px; border: 2px solid white;" src="{{this.imgPath}}" alt="">
+            <div style="text-align: center;
+    max-width: 130px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;">{{this.name}}</div>
         </a>
     </div>
 </div>
