--- a/src/pages/cast/cast.hbs
+++ b/src/pages/cast/cast.hbs
@@ -51,7 +51,7 @@
         <div>{{cast.place}}</div>
     </div>
 </div>
-<div style="font-size: 1.5rem;font-weight: 600;">Фильмы и сериалы онлайн</div>
+<div style="font-size: 2rem;font-weight: 600; color:white; text-align:center; padding-top: 2rem">Фильмы и сериалы</div>
 <div class="genre-container">
     {{#each content}}
     {{> partial/preview-card baseUrl="movies" this=content}}
