--- a/src/pages/content/content.css
+++ b/src/pages/content/content.css
@@ -101,6 +101,7 @@
     color: aliceblue;
     flex-direction: row;
     gap: 10px;
+    align-items: baseline;
 }
 
 .content-container__advanced-info {
