--- a/src/pages/genre/genre.css
+++ b/src/pages/genre/genre.css
@@ -1,7 +1,13 @@
 .genre-container {
     flex-wrap: wrap;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     gap: 50px;
     padding: 50px;
+}
+
+@media (max-width: 900px) {
+    .genre-container {
+        justify-content: center;
+    }
 }
