--- a/src/pages/feed/components/feed-collection.css
+++ b/src/pages/feed/components/feed-collection.css
@@ -44,7 +44,7 @@
 }
 
 .feed-collection__container-card__video {
-    object-fit: none;
+    /*object-fit: none;*/
     border-radius: 1rem;
     transition: all .3s;
 }
